# fabric-project

./: .gitignore  .yamllint.yaml  README.md  pyproject.toml  test.py  testing-terminology.md  tests.py  todo
.deploy/: apply_changes_to_data_pipelines.py  assign_rbac_to_workspace.py  deploy_workspace_items.py
.deployment/: deploy.py
.github/workflows/: cd-dev.yml  cd-prod.yml  cd-test.yml  ci-pipeline-windows.yml  ci.yml  deploy-dev.yml  deploy-prod.yml  deploy-test.yml  post-deployment-tests-windows.yml  post-deployment.-tests.yml  rehydrate-data-dev.yml  rehydrate-data-prod.yml  rehydrate-data-test.yml  run_artifacts_responsible_for_rehydrating_data.yml
_legacy/.github/workflows/: cd-dev.yml  cd-test.yml
helpers/: common.py
tests/.deploy/: test_deploy_workspace_items.py
tests/workspace/store/: test_data_quality_lakehouse_testLH1_table_dimension_stock_item.py  test_files_lakehouse_testLH1.py
workspace/engineering/: Readme.md  acl.json  config.yml  parameter.yml
workspace/engineering/env_testEnv.Environment/: .platform
workspace/engineering/nt_move_sales_city_from_testLH1_to_testLH2.Notebook/: .platform  notebook-content.py
workspace/engineering/nt_transform_bikes_data_LH1.Notebook/: .platform  notebook-content.py
workspace/engineering/nt_transform_fact_sales_from_mainLH1_to_testLH1.Notebook/: .platform  notebook-content.py
workspace/engineering/nt_transform_sales_data_testLH1.Notebook/: .platform  notebook-content.py
workspace/integration/: Readme.md  acl.json  config.yml  parameter.yml
workspace/integration/copyToLH!.DataPipeline/: .platform  pipeline-content.json
workspace/integration/copyjob2.CopyJob/: .platform
workspace/integration/cp_ciruits_from_mainLH1_to_testLH1.CopyJob/: .platform  copyjob-content.json
workspace/integration/df_import_customers_from_mainLH1_to_testLH1.Dataflow/: .platform  mashup.pq  queryMetadata.json
workspace/integration/df_import_trains_from_mainLH1_to_testLH1.Dataflow/: .platform  mashup.pq  queryMetadata.json
workspace/integration/df_populate_LH1_with_bikes.Dataflow/: .platform  mashup.pq  queryMetadata.json
workspace/integration/df_populate_testLH1_from_mainLH1.Dataflow/: .platform  mashup.pq  queryMetadata.json
workspace/integration/df_populate_testLH1_with_sourceLH1.Dataflow/: .platform  mashup.pq  queryMetadata.json
workspace/integration/df_populate_testLH2_from_mainLH1.Dataflow/: .platform  mashup.pq  queryMetadata.json
workspace/integration/populateLH1_bikes2.CopyJob/: .platform  copyjob-content.json
workspace/integration/populateLH1_crime.CopyJob/: .platform  copyjob-content.json
workspace/integration/populateLH_diabetesCSV.DataPipeline/: .platform  pipeline-content.json
workspace/integration/testDataFlow.Dataflow/: .platform  (+2 more)
workspace/orchestration/: Readme.md  acl.json  config.yml  parameter.yml
workspace/presentation/: acl.json  config.yml  parameter.yml
workspace/store/: Readme.md  acl.json  acl.yml  config.yml  parameter.yml
(+39 files in other folders)
