[project]
name = "fabric-project"
version = "0.1.0"
description = ""
authors = [
    {name = "JakLjk",email = "lejk99@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fabric-cicd (>=0.1.30,<0.2.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "ruff (>=0.14.6,<0.15.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "azure-identity (>=1.25.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
