[project]
name = "fabric-project"
version = "0.1.0"
description = ""
authors = [
    {name = "JakLjk", email = "lejk99@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fabric-cicd (>=0.1.30,<0.2.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "azure-identity (>=1.25.1,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.test.dependencies]
pytest = ">=9.0.1,<10.0.0"
ruff = ">=0.14.6,<0.15.0"
yamllint = ">=1.37.1,<2.0.0"
jsonlint = ">=0.1,<0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
